--- a/AuctionAce.Api/Views/Home/Index.cshtml
+++ b/AuctionAce.Api/Views/Home/Index.cshtml
@@ -1,5 +1,7 @@
-﻿@{
-    string userIdString = Context.Session.GetString("UserId");    
+﻿@using AuctionAce.Api.Models.ViewModels.Home
+@model HomeViewModel
+@{
+    string userIdString = Context.Session.GetString("UserId");
     int userId = 0;
     if (!string.IsNullOrEmpty(userIdString) && int.TryParse(userIdString, out userId))
     {
@@ -9,6 +11,113 @@
     {
         Layout = "~/Views/Shared/_LayoutUnlogged.cshtml";
     }
-
 }
 
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-8" style="height: 100%; border-right: 2px solid black;">
+            <div class="row">
+                <!-- Dodanie kontenera row dla kart -->
+                @if (Model.AuctionStatus != null)
+                {
+                    foreach (var item in Model.AuctionStatus.Where(x => x.Status == "Active"))
+                    {
+                        <div class="col-md-4 mb-4">
+                            <!-- Ustawienie kart w kolumnach o szerokości 4 (trzy karty w wierszu) -->
+                            <div class="card position-relative">
+                                @if (item.AllAuctionsPhotos != null && item.AllAuctionsPhotos.AuctionImages != null && item.AllAuctionsPhotos.AuctionImages.Count > 0)
+                                {
+                                    var firstImage = item.AllAuctionsPhotos.AuctionImages.First();
+                                    <img class="card-img-top img-thumbnail fixed-size" src="data:image/png;base64,@firstImage.AuctionImageBase64" style="height:15rem" alt="Card image cap" data-bs-toggle="modal" data-bs-target="#carouselModal-@item.Id">
+                                }
+                                else
+                                {
+                                    <img class="card-img-top" src="path/to/default/image.png" alt="No image available">
+                                }
+                                <div class="card-body">
+                                    <h5 class="card-title">
+                                        @if (item.AuctionName.Length > 27)
+                                        {
+                                            <p class="card-text">@item.AuctionName.Substring(0, 24)...</p>
+
+                                        }
+                                        else
+                                        {
+                                            @item.AuctionName
+                                        }
+                                    </h5>
+                                    <p class="card-text">
+                                        @if (item.Description.Length > 48)
+                                        {
+                                        <p class="card-text">@item.Description.Substring(0, 45)...</p>
+                                        }
+                                        else
+                                        {
+                                            @item.Description
+                                        }
+                                    </p>
+                                    <p class="card-time" id="timer-@item.Id"></p>
+                                    <a href="@Url.Action("AuctionItemList", "Auction", new { auctionId = item.Id })" class="btn btn-primary">View Auction Details</a>
+                                </div>
+                                <div class="status-bubble">
+                                    @* Status will be added dynamically *@
+                                </div>
+                            </div>
+
+                            <!-- Modal z carousel -->
+                            <div class="modal fade" id="carouselModal-@item.Id" tabindex="-1" aria-labelledby="carouselModalLabel-@item.Id" aria-hidden="true">
+                                <div class="modal-dialog modal-dialog-centered modal-lg">
+                                    <div class="modal-content">
+                                        <div class="modal-body">
+                                            <div id="carousel-@item.Id" class="carousel slide" data-bs-ride="carousel">
+                                                <div class="carousel-inner">
+                                                    @for (int i = 0; i < item.AllAuctionsPhotos.AuctionImages.Count; i++)
+                                                    {
+                                                        var image = item.AllAuctionsPhotos.AuctionImages[i];
+                                                        <div class="carousel-item @(i == 0 ? "active" : "")">
+                                                            <img class="d-block w-100" src="data:image/png;base64,@image.AuctionImageBase64" alt="Image @i">
+                                                        </div>
+                                                    }
+                                                </div>
+                                                <a class="carousel-control-prev" href="#carousel-@item.Id" role="button" data-bs-slide="prev">
+                                                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                                    <span class="visually-hidden">Previous</span>
+                                                </a>
+                                                <a class="carousel-control-next" href="#carousel-@item.Id" role="button" data-bs-slide="next">
+                                                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                                    <span class="visually-hidden">Next</span>
+                                                </a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    }
+                }
+            </div> <!-- Koniec wiersza dla kart -->
+        </div>
+
+        <!-- Prawa kolumna -->
+        <div class="col-4" style="background-color:green; height: 100%;">
+            <div>s</div>
+            <div>s</div>
+            <div>s</div>
+            <div>s</div>
+            <div>s</div>
+            <div>s</div>
+            <div>s</div>
+            <div>s</div>
+        </div>
+    </div>
+</div>
+
+
+
+
+<script>
+
+    
+
+
+</script>
